--- a/sk-plugin/package.json
+++ b/sk-plugin/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/sergei/sk-cam#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.27.0",
     "glob": "^7.1.7",
     "moment": "^2.29.1",
     "request": "^2.88.2"
