--- a/sk-web-app/package.json
+++ b/sk-web-app/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "/sk-cam-web-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
